syntax = "proto3";
package smartboard;

option java_package = "com.jintdev.bus.proto";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/api/hello"
            body: "*"
        };
    }

    rpc CurrentTime(google.protobuf.Empty) returns(HelloReply) {
        option (google.api.http) = {
            get: "/api/time"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
